--- a/html/aron/sandbox/MLS.html
+++ b/html/aron/sandbox/MLS.html
@@ -19,13 +19,13 @@
             id: "hello_world",
             de: "Hallo Welt!",
             en: "Hello World!",
-            fr: "xxxx Worldous"
+          
         },
         {
             id: "danke_fuer_die_anwendung",
             de: "Danke für die Anwendung diese Seite",
             en: "Thank you",
-            fr: "Mercy vocous"
+            
         },
     ]
 
@@ -79,16 +79,8 @@
     }
 
 
-    document.body.dataset.lang = "de"
+    document.body.dataset.lang = "en"
 
-    /*
-        let langs = ["en", "de", "fr"]
-        let index = 0
-        setInterval(() => {
-            document.body.dataset.lang = langs[index]
-            index = (index + 1) % langs.length
-        }, 5000)
-    */
 </script>
 
 </html>
